@@ -38,8 +38,10 @@ unset($hwcrypto);
 $dmesg = system_get_dmesg_boot();
 if (preg_match("/^hifn.: (.*?),/m", $dmesg, $matches))
 	$hwcrypto = $matches[1];
-if (preg_match("/VIA Padlock/m", $dmesg, $matches))
+if (preg_match("/^padlock.: (.*?)/m", $dmesg, $matches))
 	$hwcrypto = "VIA Padlock";
+if (preg_match("/^glxsb.: (.*?)/m", $dmesg, $matches))
+	$hwcrypto = "AMD Geode LX Security Block";
 $specplatform = system_identify_specific_platform();
 if (preg_match("/^CPU.*/m", $dmesg, $matches) )
 	$cpudetail = " - " . $matches[0];
